re-run lentic with revised darn

--- a/use_cases/lakes/norway/final_outcome/darn_lake_1_d_10_likelihood.krona_plot.html
+++ b/use_cases/lakes/norway/final_outcome/darn_lake_1_d_10_likelihood.krona_plot.html
@@ -6626,227 +6626,278 @@ function zoomOut()
     <dataset>darn_likelihood_lake_1_d_10_krona</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>297.21502169</val></magnitude>
- <node name="DISTANT">
-  <magnitude><val>58.70544</val></magnitude>
- </node>
+ <magnitude><val>153.641402483</val></magnitude>
  <node name="Archaea">
-  <magnitude><val>89.1346</val></magnitude>
-  <node name="TACK_group">
-   <magnitude><val>1.203</val></magnitude>
-   <node name="Crenarchaeota">
-    <magnitude><val>1.203</val></magnitude>
-    <node name="Thermoprotei">
-     <magnitude><val>1.203</val></magnitude>
-    </node>
-   </node>
-  </node>
+  <magnitudeUnassigned><val>2.074</val></magnitudeUnassigned>
+  <magnitude><val>2.9716</val></magnitude>
   <node name="Euryarchaeota">
-   <magnitude><val>87.9316</val></magnitude>
-   <node name="environmental_samples">
-    <magnitude><val>87.9316</val></magnitude>
-    <node name="uncultured_marine_group_II/III">
-     <magnitudeUnassigned><val>87.4246</val></magnitudeUnassigned>
-     <magnitude><val>87.9316</val></magnitude>
-     <node name="euryarchaeote_AD1000_61_A07">
-      <magnitude><val>0.507</val></magnitude>
-     </node>
-    </node>
-   </node>
-  </node>
- </node>
- <node name="Eukaryota">
-  <magnitudeUnassigned><val>104.6468</val></magnitudeUnassigned>
-  <magnitude><val>145.83813169</val></magnitude>
-  <node name="Cnidaria">
-   <magnitude><val>11.8896</val></magnitude>
-   <node name="Myxozoa">
-    <magnitude><val>11.8896</val></magnitude>
-    <magnitudeUnassigned><val>3.657</val></magnitudeUnassigned>
-    <node name="Multivalvulida">
-     <magnitude><val>6.2362</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>6.2362</val></magnitude>
-      <node name="Kudoa">
-       <magnitude><val>6.2362</val></magnitude>
-      </node>
-     </node>
-    </node>
-    <node name="Malacovalvulida">
-     <magnitude><val>1.9964</val></magnitude>
-     <node name="Saccosporidae">
-      <magnitude><val>1.9964</val></magnitude>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Cryptophyceae">
-   <magnitude><val>2.6929</val></magnitude>
-   <node name="Cryptophyceae">
-    <magnitude><val>2.6929</val></magnitude>
-    <node name="Cryptomonadales">
-     <magnitude><val>2.1723</val></magnitude>
-    </node>
-    <node name="Kathablepharidacea">
-     <magnitude><val>0.5206</val></magnitude>
-     <node name="Katablepharidaceae">
-      <magnitude><val>0.5206</val></magnitude>
-      <node name="Leucocryptos">
-       <magnitude><val>0.5206</val></magnitude>
-       <node name="Leucocryptos_marina">
-        <magnitude><val>0.5206</val></magnitude>
+   <magnitude><val>0.6541</val></magnitude>
+   <node name="Archaeoglobi">
+    <magnitude><val>0.6541</val></magnitude>
+    <node name="Archaeoglobales">
+     <magnitude><val>0.6541</val></magnitude>
+     <node name="Archaeoglobaceae">
+      <magnitude><val>0.6541</val></magnitude>
+      <node name="Archaeoglobaceae">
+       <magnitude><val>0.6541</val></magnitude>
+       <node name="Ferroglobus">
+        <magnitude><val>0.6541</val></magnitude>
        </node>
       </node>
      </node>
     </node>
    </node>
   </node>
-  <node name="Mucoromycota">
-   <magnitude><val>0.5072</val></magnitude>
-   <node name="Glomeromycetes">
-    <magnitude><val>0.5072</val></magnitude>
-   </node>
-  </node>
-  <node name="Chlorophyta">
-   <magnitude><val>3.4844</val></magnitude>
-   <node name="Chlorophyceae">
-    <magnitude><val>3</val></magnitude>
-    <node name="Protosiphonales">
-     <magnitude><val>3</val></magnitude>
-     <node name="Protosiphonaceae">
-      <magnitude><val>3</val></magnitude>
-      <node name="Protosiphon">
-       <magnitude><val>3</val></magnitude>
-       <node name="Protosiphon_botryoides">
-        <magnitude><val>3</val></magnitude>
-       </node>
-      </node>
-     </node>
+  <node name="Candidatus_Thermoplasmatota">
+   <magnitude><val>0.2435</val></magnitude>
+   <node name="Thermoplasmata">
+    <magnitude><val>0.2435</val></magnitude>
+    <node name="Thermoplasmatales">
+     <magnitude><val>0.2435</val></magnitude>
     </node>
-   </node>
-   <node name="Ulvophyceae">
-    <magnitude><val>0.4844</val></magnitude>
-    <node name="Ulotrichales">
-     <magnitude><val>0.4844</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Euglenozoa">
-   <magnitude><val>0.7114</val></magnitude>
-   <node name="Euglenida">
-    <magnitude><val>0.7114</val></magnitude>
-   </node>
-  </node>
-  <node name="Bryozoa">
-   <magnitude><val>0.6245</val></magnitude>
-   <node name="Phylactolaemata">
-    <magnitude><val>0.6245</val></magnitude>
-    <node name="Fredericellidae">
-     <magnitude><val>0.6245</val></magnitude>
-     <node name="Fredericellidae">
-      <magnitude><val>0.6245</val></magnitude>
-      <node name="Fredericella">
-       <magnitude><val>0.6245</val></magnitude>
-       <node name="Fredericella_sultana">
-        <magnitude><val>0.6245</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Basidiomycota">
-   <magnitude><val>0.5263</val></magnitude>
-   <node name="Agaricomycetes">
-    <magnitude><val>0.5263</val></magnitude>
-    <node name="Geastrales">
-     <magnitude><val>0.5263</val></magnitude>
-     <node name="Sphaerobolaceae">
-      <magnitude><val>0.5263</val></magnitude>
-      <node name="Sphaerobolus">
-       <magnitude><val>0.5263</val></magnitude>
-       <node name="Sphaerobolus_stellatus">
-        <magnitude><val>0.5263</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Streptophyta">
-   <magnitude><val>1.46293169</val></magnitude>
-   <node name="Coleochaetophyceae">
-    <magnitude><val>0.40073169</val></magnitude>
-    <node name="Coleochaetales">
-     <magnitude><val>0.40073169</val></magnitude>
-    </node>
-   </node>
-   <node name="Haplomitriopsida">
-    <magnitude><val>1.0622</val></magnitude>
-    <node name="Treubiales">
-     <magnitude><val>1.0622</val></magnitude>
-     <node name="Treubiaceae">
-      <magnitude><val>1.0622</val></magnitude>
-      <node name="Treubia">
-       <magnitude><val>1.0622</val></magnitude>
-       <node name="Treubia_lacunosa">
-        <magnitude><val>1.0622</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Nematoda">
-   <magnitude><val>9.9793</val></magnitude>
-   <node name="Chromadorea">
-    <magnitudeUnassigned><val>8.2971</val></magnitudeUnassigned>
-    <magnitude><val>9.9793</val></magnitude>
-    <node name="Plectida">
-     <magnitude><val>1.6822</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Ciliophora">
-   <magnitude><val>1.1694</val></magnitude>
-   <node name="Heterotrichea">
-    <magnitude><val>1.1694</val></magnitude>
-    <node name="Heterotrichida">
-     <magnitude><val>1.1694</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Platyhelminthes">
-   <magnitude><val>0.3359</val></magnitude>
-   <node name="Cestoda">
-    <magnitude><val>0.3359</val></magnitude>
-   </node>
-  </node>
-  <node name="Arthropoda">
-   <magnitude><val>7.8075</val></magnitude>
-   <node name="Hexanauplia">
-    <magnitude><val>2.0337</val></magnitude>
-    <node name="Cyclopoida">
-     <magnitude><val>2.0337</val></magnitude>
-    </node>
-   </node>
-   <node name="Insecta">
-    <magnitudeUnassigned><val>2.7196</val></magnitudeUnassigned>
-    <magnitude><val>4.5243</val></magnitude>
-    <node name="Coleoptera">
-     <magnitude><val>1.8047</val></magnitude>
-    </node>
-   </node>
-   <node name="Branchiopoda">
-    <magnitude><val>1.2495</val></magnitude>
    </node>
   </node>
  </node>
  <node name="Bacteria">
-  <magnitude><val>3.53685</val></magnitude>
-  <magnitudeUnassigned><val>3.30765</val></magnitudeUnassigned>
+  <magnitudeUnassigned><val>2.2058</val></magnitudeUnassigned>
+  <magnitude><val>8.154102483</val></magnitude>
+  <node name="Terrabacteria_group">
+   <magnitude><val>3.9075</val></magnitude>
+   <node name="Firmicutes">
+    <magnitude><val>3.9075</val></magnitude>
+    <node name="Bacilli">
+     <magnitude><val>3.9075</val></magnitude>
+     <node name="Bacillales">
+      <magnitude><val>1.4477</val></magnitude>
+     </node>
+     <node name="Lactobacillales">
+      <magnitude><val>2.4598</val></magnitude>
+      <node name="Lactobacillaceae">
+       <magnitude><val>2.4598</val></magnitude>
+       <node name="Agrilactobacillus">
+        <magnitude><val>2.4598</val></magnitude>
+        <node name="Agrilactobacillus">
+         <magnitude><val>2.4598</val></magnitude>
+         <node name="composti">
+          <magnitude><val>2.4598</val></magnitude>
+          <node name="Agrilactobacillus">
+           <magnitude><val>2.4598</val></magnitude>
+           <node name="composti">
+            <magnitude><val>2.4598</val></magnitude>
+            <node name="DSM">
+             <magnitude><val>2.4598</val></magnitude>
+             <node name="18527">
+              <magnitude><val>2.4598</val></magnitude>
+              <node name="=">
+               <magnitude><val>2.4598</val></magnitude>
+               <node name="JCM">
+                <magnitude><val>2.4598</val></magnitude>
+                <node name="14202">
+                 <magnitude><val>2.4598</val></magnitude>
+                </node>
+               </node>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
+       </node>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="PVC_group">
+   <magnitude><val>0.4876</val></magnitude>
+   <node name="Planctomycetes">
+    <magnitude><val>0.4876</val></magnitude>
+    <node name="Candidatus_Brocadiae">
+     <magnitude><val>0.4876</val></magnitude>
+     <node name="Candidatus_Brocadiales">
+      <magnitude><val>0.4876</val></magnitude>
+      <node name="Candidatus_Brocadiaceae">
+       <magnitude><val>0.4876</val></magnitude>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
   <node name="Proteobacteria">
-   <magnitude><val>0.2292</val></magnitude>
+   <magnitude><val>1.553202483</val></magnitude>
+   <magnitudeUnassigned><val>0.9162</val></magnitudeUnassigned>
+   <node name="Alphaproteobacteria">
+    <magnitude><val>2.483e-06</val></magnitude>
+    <node name="Rickettsiales">
+     <magnitude><val>2.483e-06</val></magnitude>
+     <node name="unclassified_Rickettsiales">
+      <magnitude><val>2.483e-06</val></magnitude>
+      <node name="unclassified_Rickettsiales">
+       <magnitude><val>2.483e-06</val></magnitude>
+      </node>
+     </node>
+    </node>
+   </node>
+   <node name="Gammaproteobacteria">
+    <magnitude><val>0.637</val></magnitude>
+    <node name="Enterobacterales">
+     <magnitude><val>0.637</val></magnitude>
+    </node>
+   </node>
+  </node>
+ </node>
+ <node name="DISTANT">
+  <magnitude><val>6.4855</val></magnitude>
+ </node>
+ <node name="Eukaryota">
+  <magnitude><val>136.0302</val></magnitude>
+  <magnitudeUnassigned><val>67.3774</val></magnitudeUnassigned>
+  <node name="Chlorophyta">
+   <magnitude><val>1.2111</val></magnitude>
+   <node name="Chlorophyceae">
+    <magnitude><val>1.2111</val></magnitude>
+    <node name="Microsporaceae">
+     <magnitude><val>1.2111</val></magnitude>
+     <node name="Microsporaceae">
+      <magnitude><val>1.2111</val></magnitude>
+      <node name="Microspora">
+       <magnitude><val>1.2111</val></magnitude>
+       <node name="Microspora_stagnorum">
+        <magnitude><val>1.2111</val></magnitude>
+       </node>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Cnidaria">
+   <magnitude><val>4.3852</val></magnitude>
+   <node name="Myxozoa">
+    <magnitude><val>4.3852</val></magnitude>
+   </node>
+  </node>
+  <node name="Mucoromycota">
+   <magnitude><val>0.6895</val></magnitude>
+   <node name="Glomeromycetes">
+    <magnitude><val>0.6895</val></magnitude>
+   </node>
+  </node>
+  <node name="Gnathostomulida">
+   <magnitude><val>1.7836</val></magnitude>
+  </node>
+  <node name="Chytridiomycota">
+   <magnitude><val>3.8794</val></magnitude>
+   <node name="Chytridiomycetes">
+    <magnitude><val>3.8794</val></magnitude>
+    <node name="Spizellomycetales">
+     <magnitude><val>3.8794</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Basidiomycota">
+   <magnitude><val>7.3015</val></magnitude>
+   <node name="Microbotryomycetes">
+    <magnitude><val>7.3015</val></magnitude>
+    <node name="Sporidiobolales">
+     <magnitude><val>7.3015</val></magnitude>
+     <node name="Sporidiobolaceae">
+      <magnitude><val>7.3015</val></magnitude>
+      <node name="Rhodotorula">
+       <magnitude><val>7.3015</val></magnitude>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Chordata">
+   <magnitude><val>0.5657</val></magnitude>
+   <node name="Leptocardii">
+    <magnitude><val>0.5657</val></magnitude>
+    <node name="Amphioxiformes">
+     <magnitude><val>0.5657</val></magnitude>
+     <node name="Branchiostomidae">
+      <magnitude><val>0.5657</val></magnitude>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Arthropoda">
+   <magnitude><val>7.4846</val></magnitude>
+   <node name="Branchiopoda">
+    <magnitudeUnassigned><val>0.7966</val></magnitudeUnassigned>
+    <magnitude><val>1.2839</val></magnitude>
+    <node name="Anostraca">
+     <magnitude><val>0.4873</val></magnitude>
+    </node>
+   </node>
+   <node name="Insecta">
+    <magnitudeUnassigned><val>3.0839</val></magnitudeUnassigned>
+    <magnitude><val>3.8099</val></magnitude>
+    <node name="Mecoptera">
+     <magnitude><val>0.726</val></magnitude>
+    </node>
+   </node>
+   <node name="Hexanauplia">
+    <magnitude><val>2.3908</val></magnitude>
+    <node name="Cyclopoida">
+     <magnitude><val>2.3908</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Cryptophyceae">
+   <magnitude><val>1.3955</val></magnitude>
+   <node name="Cryptophyceae">
+    <magnitude><val>1.3955</val></magnitude>
+    <node name="Cryptomonadales">
+     <magnitude><val>1.3955</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Euglenozoa">
+   <magnitude><val>34.9969</val></magnitude>
+   <node name="Euglenida">
+    <magnitude><val>34.9969</val></magnitude>
+   </node>
+  </node>
+  <node name="Dictyochophyceae">
+   <magnitude><val>0.7093</val></magnitude>
+   <node name="Dictyochophyceae">
+    <magnitude><val>0.7093</val></magnitude>
+   </node>
+  </node>
+  <node name="Bryozoa">
+   <magnitude><val>0.6547</val></magnitude>
+   <node name="Phylactolaemata">
+    <magnitude><val>0.6547</val></magnitude>
+    <node name="Fredericellidae">
+     <magnitude><val>0.6547</val></magnitude>
+     <node name="Fredericellidae">
+      <magnitude><val>0.6547</val></magnitude>
+      <node name="Fredericella">
+       <magnitude><val>0.6547</val></magnitude>
+       <node name="Fredericella_sultana">
+        <magnitude><val>0.6547</val></magnitude>
+       </node>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Platyhelminthes">
+   <magnitude><val>3.5958</val></magnitude>
+   <node name="Cestoda">
+    <magnitude><val>1.6015</val></magnitude>
+   </node>
+   <node name="Catenulida">
+    <magnitude><val>1.9943</val></magnitude>
+    <node name="Stenostomidae">
+     <magnitude><val>1.9943</val></magnitude>
+     <node name="Stenostomidae">
+      <magnitude><val>1.9943</val></magnitude>
+     </node>
+    </node>
+   </node>
   </node>
  </node>
 </node>
