--- a/use_cases/lakes/norway/final_outcome/darn_lake_2_d_10_likelihood.krona_plot.html
+++ b/use_cases/lakes/norway/final_outcome/darn_lake_2_d_10_likelihood.krona_plot.html
@@ -6626,265 +6626,99 @@ function zoomOut()
     <dataset>darn_likelihood_lake_2_d_10_krona</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>223.85472</val></magnitude>
- <node name="Bacteria">
-  <magnitude><val>3.2444</val></magnitude>
-  <magnitudeUnassigned><val>3.0995</val></magnitudeUnassigned>
-  <node name="Proteobacteria">
-   <magnitude><val>0.1449</val></magnitude>
-  </node>
- </node>
- <node name="Archaea">
-  <magnitude><val>52.0475</val></magnitude>
-  <node name="TACK_group">
-   <magnitude><val>0.7986</val></magnitude>
-   <node name="Crenarchaeota">
-    <magnitude><val>0.7986</val></magnitude>
-    <node name="Thermoprotei">
-     <magnitude><val>0.7986</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Euryarchaeota">
-   <magnitude><val>51.2489</val></magnitude>
-   <node name="environmental_samples">
-    <magnitude><val>51.2489</val></magnitude>
-    <node name="uncultured_marine_group_II/III">
-     <magnitude><val>51.2489</val></magnitude>
-    </node>
-   </node>
-  </node>
- </node>
- <node name="DISTANT">
-  <magnitude><val>38.74434</val></magnitude>
- </node>
+ <magnitude><val>227.0017</val></magnitude>
  <node name="Eukaryota">
-  <magnitudeUnassigned><val>87.5418</val></magnitudeUnassigned>
-  <magnitude><val>129.81848</val></magnitude>
-  <node name="Mucoromycota">
-   <magnitude><val>1.2245</val></magnitude>
-   <node name="Glomeromycetes">
-    <magnitude><val>1.2245</val></magnitude>
-   </node>
-  </node>
-  <node name="Ascomycota">
-   <magnitude><val>0.4334</val></magnitude>
-   <node name="Lecanoromycetes">
-    <magnitude><val>0.4334</val></magnitude>
-    <node name="Caliciales">
-     <magnitude><val>0.4334</val></magnitude>
-     <node name="Physciaceae">
-      <magnitude><val>0.4334</val></magnitude>
-      <node name="Heterodermia">
-       <magnitude><val>0.4334</val></magnitude>
+  <magnitude><val>226.0807</val></magnitude>
+  <magnitudeUnassigned><val>74.2363</val></magnitudeUnassigned>
+  <node name="Basidiomycota">
+   <magnitude><val>0.5226</val></magnitude>
+   <node name="Microbotryomycetes">
+    <magnitude><val>0.5226</val></magnitude>
+    <node name="Sporidiobolales">
+     <magnitude><val>0.5226</val></magnitude>
+     <node name="Sporidiobolaceae">
+      <magnitude><val>0.5226</val></magnitude>
+      <node name="Rhodotorula">
+       <magnitude><val>0.5226</val></magnitude>
       </node>
      </node>
     </node>
    </node>
   </node>
-  <node name="Cryptophyceae">
-   <magnitude><val>0.5375</val></magnitude>
-   <node name="Cryptophyceae">
-    <magnitude><val>0.5375</val></magnitude>
-    <node name="Kathablepharidacea">
-     <magnitude><val>0.5375</val></magnitude>
-     <node name="Katablepharidaceae">
-      <magnitude><val>0.5375</val></magnitude>
-      <node name="Leucocryptos">
-       <magnitude><val>0.5375</val></magnitude>
-       <node name="Leucocryptos_marina">
-        <magnitude><val>0.5375</val></magnitude>
+  <node name="Arthropoda">
+   <magnitude><val>8.0077</val></magnitude>
+   <node name="Branchiopoda">
+    <magnitude><val>3.7787</val></magnitude>
+   </node>
+   <node name="Insecta">
+    <magnitude><val>1.6004</val></magnitude>
+   </node>
+   <node name="Hexanauplia">
+    <magnitudeUnassigned><val>1.6175</val></magnitudeUnassigned>
+    <magnitude><val>2.6286</val></magnitude>
+    <node name="Calanoida">
+     <magnitude><val>1.0111</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Euglenozoa">
+   <magnitude><val>140.9029</val></magnitude>
+   <node name="Euglenida">
+    <magnitudeUnassigned><val>139.9728</val></magnitudeUnassigned>
+    <magnitude><val>140.9029</val></magnitude>
+    <node name="Eutreptiales">
+     <magnitude><val>0.9301</val></magnitude>
+     <node name="Eutreptiella">
+      <magnitude><val>0.9301</val></magnitude>
+      <node name="Eutreptiella">
+       <magnitude><val>0.9301</val></magnitude>
+       <node name="Eutreptiella_gymnastica">
+        <magnitude><val>0.9301</val></magnitude>
        </node>
       </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Platyhelminthes">
-   <magnitude><val>0.9792</val></magnitude>
-   <node name="Catenulida">
-    <magnitude><val>0.9792</val></magnitude>
-    <node name="Stenostomidae">
-     <magnitude><val>0.9792</val></magnitude>
-     <node name="Stenostomidae">
-      <magnitude><val>0.9792</val></magnitude>
      </node>
     </node>
    </node>
   </node>
   <node name="Chlorophyta">
-   <magnitude><val>3.1916</val></magnitude>
+   <magnitude><val>1.4412</val></magnitude>
    <node name="Chlorophyceae">
-    <magnitude><val>2</val></magnitude>
-    <node name="Protosiphonales">
-     <magnitude><val>2</val></magnitude>
-     <node name="Protosiphonaceae">
-      <magnitude><val>2</val></magnitude>
-      <node name="Protosiphon">
-       <magnitude><val>2</val></magnitude>
-       <node name="Protosiphon_botryoides">
-        <magnitude><val>2</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Trebouxiophyceae">
-    <magnitude><val>0.5181</val></magnitude>
-    <node name="Trebouxiales">
-     <magnitude><val>0.5181</val></magnitude>
-     <node name="Trebouxiaceae">
-      <magnitude><val>0.5181</val></magnitude>
-     </node>
-    </node>
-   </node>
-   <node name="Ulvophyceae">
-    <magnitude><val>0.6735</val></magnitude>
-    <node name="Ulotrichales">
-     <magnitude><val>0.6735</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Bryozoa">
-   <magnitude><val>1.3988</val></magnitude>
-   <node name="Phylactolaemata">
-    <magnitude><val>1.3988</val></magnitude>
-    <node name="Fredericellidae">
-     <magnitude><val>1.3988</val></magnitude>
-     <node name="Fredericellidae">
-      <magnitude><val>1.3988</val></magnitude>
-      <node name="Fredericella">
-       <magnitude><val>1.3988</val></magnitude>
-       <node name="Fredericella_sultana">
-        <magnitude><val>1.3988</val></magnitude>
+    <magnitude><val>1.4412</val></magnitude>
+    <node name="Microsporaceae">
+     <magnitude><val>1.4412</val></magnitude>
+     <node name="Microsporaceae">
+      <magnitude><val>1.4412</val></magnitude>
+      <node name="Microspora">
+       <magnitude><val>1.4412</val></magnitude>
+       <node name="Microspora_stagnorum">
+        <magnitude><val>1.4412</val></magnitude>
        </node>
       </node>
      </node>
     </node>
    </node>
   </node>
-  <node name="Cnidaria">
-   <magnitude><val>12.5534</val></magnitude>
-   <node name="Myxozoa">
-    <magnitudeUnassigned><val>4.5833</val></magnitudeUnassigned>
-    <magnitude><val>12.5534</val></magnitude>
-    <node name="Malacovalvulida">
-     <magnitude><val>1.5</val></magnitude>
-     <node name="Saccosporidae">
-      <magnitude><val>1.5</val></magnitude>
-     </node>
-    </node>
-    <node name="Multivalvulida">
-     <magnitude><val>6.4701</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>6.4701</val></magnitude>
-      <node name="Kudoa">
-       <magnitude><val>6.4701</val></magnitude>
-      </node>
-     </node>
+  <node name="Chytridiomycota">
+   <magnitude><val>0.97</val></magnitude>
+   <node name="Chytridiomycetes">
+    <magnitude><val>0.97</val></magnitude>
+    <node name="Spizellomycetales">
+     <magnitude><val>0.97</val></magnitude>
     </node>
    </node>
   </node>
-  <node name="Streptophyta">
-   <magnitude><val>0.80328</val></magnitude>
-   <node name="Haplomitriopsida">
-    <magnitude><val>0.6687</val></magnitude>
-    <node name="Treubiales">
-     <magnitude><val>0.6687</val></magnitude>
-     <node name="Treubiaceae">
-      <magnitude><val>0.6687</val></magnitude>
-      <node name="Treubia">
-       <magnitude><val>0.6687</val></magnitude>
-       <node name="Treubia_lacunosa">
-        <magnitude><val>0.6687</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Coleochaetophyceae">
-    <magnitude><val>0.13458</val></magnitude>
-    <node name="Coleochaetales">
-     <magnitude><val>0.13458</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Nematoda">
-   <magnitude><val>11.8311</val></magnitude>
-   <node name="Chromadorea">
-    <magnitude><val>11.3542</val></magnitude>
-    <magnitudeUnassigned><val>9.9625</val></magnitudeUnassigned>
-    <node name="Desmoscolecida">
-     <magnitude><val>0.7414</val></magnitude>
-     <node name="Desmoscolecidae">
-      <magnitude><val>0.7414</val></magnitude>
-      <node name="Desmoscolex">
-       <magnitude><val>0.7414</val></magnitude>
-       <node name="Desmoscolex_koloensis">
-        <magnitude><val>0.7414</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-    <node name="Plectida">
-     <magnitude><val>0.6503</val></magnitude>
-    </node>
-   </node>
-   <node name="Enoplea">
-    <magnitude><val>0.4769</val></magnitude>
-   </node>
-  </node>
-  <node name="Arthropoda">
-   <magnitude><val>8.5677</val></magnitude>
-   <node name="Branchiopoda">
-    <magnitudeUnassigned><val>1.9965</val></magnitudeUnassigned>
-    <magnitude><val>2.5412</val></magnitude>
-    <node name="Anostraca">
-     <magnitude><val>0.5447</val></magnitude>
-    </node>
-   </node>
-   <node name="Insecta">
-    <magnitude><val>4.7694</val></magnitude>
-    <magnitudeUnassigned><val>2.738</val></magnitudeUnassigned>
-    <node name="Mecoptera">
-     <magnitude><val>2.0314</val></magnitude>
-    </node>
-   </node>
-   <node name="Hexanauplia">
-    <magnitude><val>1.2571</val></magnitude>
-    <magnitudeUnassigned><val>0.6246</val></magnitudeUnassigned>
-    <node name="Cyclopoida">
-     <magnitude><val>0.6325</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Basidiomycota">
-   <magnitude><val>0.7562</val></magnitude>
-   <node name="Agaricomycetes">
-    <magnitude><val>0.5233</val></magnitude>
-    <node name="Geastrales">
-     <magnitude><val>0.5233</val></magnitude>
-     <node name="Sphaerobolaceae">
-      <magnitude><val>0.5233</val></magnitude>
-      <node name="Sphaerobolus">
-       <magnitude><val>0.5233</val></magnitude>
-       <node name="Sphaerobolus_stellatus">
-        <magnitude><val>0.5233</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Microbotryomycetes">
-    <magnitude><val>0.2329</val></magnitude>
-    <node name="Sporidiobolales">
-     <magnitude><val>0.2329</val></magnitude>
-     <node name="Sporidiobolaceae">
-      <magnitude><val>0.2329</val></magnitude>
-      <node name="Rhodotorula">
-       <magnitude><val>0.2329</val></magnitude>
-      </node>
-     </node>
+ </node>
+ <node name="Bacteria">
+  <magnitude><val>0.751</val></magnitude>
+ </node>
+ <node name="Archaea">
+  <magnitude><val>0.17</val></magnitude>
+  <node name="Candidatus_Thermoplasmatota">
+   <magnitude><val>0.17</val></magnitude>
+   <node name="Thermoplasmata">
+    <magnitude><val>0.17</val></magnitude>
+    <node name="Thermoplasmatales">
+     <magnitude><val>0.17</val></magnitude>
     </node>
    </node>
   </node>
