--- a/use_cases/lakes/norway/final_outcome/darn_lake_2_d_10_pres_abs.krona_plot.html
+++ b/use_cases/lakes/norway/final_outcome/darn_lake_2_d_10_pres_abs.krona_plot.html
@@ -6626,132 +6626,16 @@ function zoomOut()
     <dataset>darn_counts_lake_2_d_10_krona</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>315</val></magnitude>
- <node name="Archaea">
-  <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-  <magnitude><val>69</val></magnitude>
-  <node name="Euryarchaeota">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>67</val></magnitude>
-   <node name="environmental_samples">
-    <magnitude><val>67</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="uncultured_marine_group_II/III">
-     <magnitude><val>67</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="TACK_group">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>2</val></magnitude>
-   <node name="Crenarchaeota">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>2</val></magnitude>
-    <node name="Thermoprotei">
-     <magnitude><val>2</val></magnitude>
-    </node>
-   </node>
-  </node>
- </node>
+ <magnitude><val>260</val></magnitude>
  <node name="Bacteria">
-  <magnitudeUnassigned><val>8</val></magnitudeUnassigned>
-  <magnitude><val>9</val></magnitude>
-  <node name="Proteobacteria">
-   <magnitude><val>1</val></magnitude>
-  </node>
- </node>
- <node name="DISTANT">
-  <magnitude><val>60</val></magnitude>
+  <magnitude><val>1</val></magnitude>
  </node>
  <node name="Eukaryota">
-  <magnitude><val>177</val></magnitude>
-  <magnitudeUnassigned><val>109</val></magnitudeUnassigned>
-  <node name="Ascomycota">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>1</val></magnitude>
-   <node name="Lecanoromycetes">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Caliciales">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>1</val></magnitude>
-     <node name="Physciaceae">
-      <magnitude><val>1</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Heterodermia">
-       <magnitude><val>1</val></magnitude>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Chlorophyta">
-   <magnitude><val>4</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Chlorophyceae">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>2</val></magnitude>
-    <node name="Protosiphonales">
-     <magnitude><val>2</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Protosiphonaceae">
-      <magnitude><val>2</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Protosiphon">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>2</val></magnitude>
-       <node name="Protosiphon_botryoides">
-        <magnitude><val>2</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Ulvophyceae">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>1</val></magnitude>
-    <node name="Ulotrichales">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-   <node name="Trebouxiophyceae">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Trebouxiales">
-     <magnitude><val>1</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Trebouxiaceae">
-      <magnitude><val>1</val></magnitude>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Cryptophyceae">
-   <magnitude><val>1</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Cryptophyceae">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>1</val></magnitude>
-    <node name="Kathablepharidacea">
-     <magnitude><val>1</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Katablepharidaceae">
-      <magnitude><val>1</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Leucocryptos">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>1</val></magnitude>
-       <node name="Leucocryptos_marina">
-        <magnitude><val>1</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
+  <magnitudeUnassigned><val>82</val></magnitudeUnassigned>
+  <magnitude><val>258</val></magnitude>
   <node name="Basidiomycota">
-   <magnitude><val>2</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
    <node name="Microbotryomycetes">
     <magnitude><val>1</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
@@ -6759,78 +6643,65 @@ function zoomOut()
      <magnitude><val>1</val></magnitude>
      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
      <node name="Sporidiobolaceae">
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
       <magnitude><val>1</val></magnitude>
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
       <node name="Rhodotorula">
        <magnitude><val>1</val></magnitude>
       </node>
      </node>
     </node>
    </node>
-   <node name="Agaricomycetes">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+  </node>
+  <node name="Chytridiomycota">
+   <magnitude><val>1</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Chytridiomycetes">
     <magnitude><val>1</val></magnitude>
-    <node name="Geastrales">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Spizellomycetales">
      <magnitude><val>1</val></magnitude>
-     <node name="Sphaerobolaceae">
+    </node>
+   </node>
+  </node>
+  <node name="Chlorophyta">
+   <magnitude><val>3</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Chlorophyceae">
+    <magnitude><val>3</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Microsporaceae">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <magnitude><val>3</val></magnitude>
+     <node name="Microsporaceae">
       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <magnitude><val>1</val></magnitude>
-      <node name="Sphaerobolus">
+      <magnitude><val>3</val></magnitude>
+      <node name="Microspora">
        <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>1</val></magnitude>
-       <node name="Sphaerobolus_stellatus">
-        <magnitude><val>1</val></magnitude>
+       <magnitude><val>3</val></magnitude>
+       <node name="Microspora_stagnorum">
+        <magnitude><val>3</val></magnitude>
        </node>
       </node>
      </node>
     </node>
    </node>
   </node>
-  <node name="Mucoromycota">
-   <magnitude><val>2</val></magnitude>
+  <node name="Euglenozoa">
+   <magnitude><val>158</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Glomeromycetes">
-    <magnitude><val>2</val></magnitude>
-   </node>
-  </node>
-  <node name="Platyhelminthes">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>1</val></magnitude>
-   <node name="Catenulida">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>1</val></magnitude>
-    <node name="Stenostomidae">
+   <node name="Euglenida">
+    <magnitudeUnassigned><val>157</val></magnitudeUnassigned>
+    <magnitude><val>158</val></magnitude>
+    <node name="Eutreptiales">
      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
      <magnitude><val>1</val></magnitude>
-     <node name="Stenostomidae">
-      <magnitude><val>1</val></magnitude>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Nematoda">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>14</val></magnitude>
-   <node name="Enoplea">
-    <magnitude><val>1</val></magnitude>
-   </node>
-   <node name="Chromadorea">
-    <magnitudeUnassigned><val>11</val></magnitudeUnassigned>
-    <magnitude><val>13</val></magnitude>
-    <node name="Plectida">
-     <magnitude><val>1</val></magnitude>
-    </node>
-    <node name="Desmoscolecida">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>1</val></magnitude>
-     <node name="Desmoscolecidae">
-      <magnitude><val>1</val></magnitude>
+     <node name="Eutreptiella">
       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Desmoscolex">
+      <magnitude><val>1</val></magnitude>
+      <node name="Eutreptiella">
        <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
        <magnitude><val>1</val></magnitude>
-       <node name="Desmoscolex_koloensis">
+       <node name="Eutreptiella_gymnastica">
         <magnitude><val>1</val></magnitude>
        </node>
       </node>
@@ -6840,105 +6711,33 @@ function zoomOut()
   </node>
   <node name="Arthropoda">
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>12</val></magnitude>
-   <node name="Branchiopoda">
-    <magnitude><val>4</val></magnitude>
-    <magnitudeUnassigned><val>3</val></magnitudeUnassigned>
-    <node name="Anostraca">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
+   <magnitude><val>13</val></magnitude>
    <node name="Insecta">
-    <magnitudeUnassigned><val>3</val></magnitudeUnassigned>
+    <magnitude><val>2</val></magnitude>
+   </node>
+   <node name="Branchiopoda">
     <magnitude><val>6</val></magnitude>
-    <node name="Mecoptera">
-     <magnitude><val>3</val></magnitude>
-    </node>
    </node>
    <node name="Hexanauplia">
-    <magnitude><val>2</val></magnitude>
-    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-    <node name="Cyclopoida">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Streptophyta">
-   <magnitude><val>3</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Coleochaetophyceae">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>2</val></magnitude>
-    <node name="Coleochaetales">
+    <magnitudeUnassigned><val>3</val></magnitudeUnassigned>
+    <magnitude><val>5</val></magnitude>
+    <node name="Calanoida">
      <magnitude><val>2</val></magnitude>
     </node>
    </node>
-   <node name="Haplomitriopsida">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+  </node>
+ </node>
+ <node name="Archaea">
+  <magnitude><val>1</val></magnitude>
+  <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+  <node name="Candidatus_Thermoplasmatota">
+   <magnitude><val>1</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Thermoplasmata">
     <magnitude><val>1</val></magnitude>
-    <node name="Treubiales">
-     <magnitude><val>1</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Treubiaceae">
-      <magnitude><val>1</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Treubia">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>1</val></magnitude>
-       <node name="Treubia_lacunosa">
-        <magnitude><val>1</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Bryozoa">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>2</val></magnitude>
-   <node name="Phylactolaemata">
-    <magnitude><val>2</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Fredericellidae">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>2</val></magnitude>
-     <node name="Fredericellidae">
-      <magnitude><val>2</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Fredericella">
-       <magnitude><val>2</val></magnitude>
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <node name="Fredericella_sultana">
-        <magnitude><val>2</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Cnidaria">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>26</val></magnitude>
-   <node name="Myxozoa">
-    <magnitudeUnassigned><val>6</val></magnitudeUnassigned>
-    <magnitude><val>26</val></magnitude>
-    <node name="Malacovalvulida">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>3</val></magnitude>
-     <node name="Saccosporidae">
-      <magnitude><val>3</val></magnitude>
-     </node>
-    </node>
-    <node name="Multivalvulida">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>17</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>17</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Kudoa">
-       <magnitude><val>17</val></magnitude>
-      </node>
-     </node>
+    <node name="Thermoplasmatales">
+     <magnitude><val>1</val></magnitude>
     </node>
    </node>
   </node>
