--- a/use_cases/lakes/norway/final_outcome/darn_lake_1_d_10_pres_abs.krona_plot.html
+++ b/use_cases/lakes/norway/final_outcome/darn_lake_1_d_10_pres_abs.krona_plot.html
@@ -6626,32 +6626,151 @@ function zoomOut()
     <dataset>darn_counts_lake_1_d_10_krona</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>416</val></magnitude>
+ <magnitude><val>191</val></magnitude>
  <node name="DISTANT">
-  <magnitude><val>83</val></magnitude>
+  <magnitude><val>10</val></magnitude>
+ </node>
+ <node name="Archaea">
+  <magnitude><val>5</val></magnitude>
+  <magnitudeUnassigned><val>3</val></magnitudeUnassigned>
+  <node name="Candidatus_Thermoplasmatota">
+   <magnitude><val>1</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Thermoplasmata">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>1</val></magnitude>
+    <node name="Thermoplasmatales">
+     <magnitude><val>1</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Euryarchaeota">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
+   <node name="Archaeoglobi">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>1</val></magnitude>
+    <node name="Archaeoglobales">
+     <magnitude><val>1</val></magnitude>
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <node name="Archaeoglobaceae">
+      <magnitude><val>1</val></magnitude>
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <node name="Archaeoglobaceae">
+       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+       <magnitude><val>1</val></magnitude>
+       <node name="Ferroglobus">
+        <magnitude><val>1</val></magnitude>
+       </node>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
  </node>
  <node name="Eukaryota">
-  <magnitude><val>203</val></magnitude>
-  <magnitudeUnassigned><val>132</val></magnitudeUnassigned>
-  <node name="Nematoda">
-   <magnitude><val>13</val></magnitude>
+  <magnitude><val>162</val></magnitude>
+  <magnitudeUnassigned><val>78</val></magnitudeUnassigned>
+  <node name="Chytridiomycota">
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Chromadorea">
-    <magnitudeUnassigned><val>10</val></magnitudeUnassigned>
-    <magnitude><val>13</val></magnitude>
-    <node name="Plectida">
-     <magnitude><val>3</val></magnitude>
+   <magnitude><val>4</val></magnitude>
+   <node name="Chytridiomycetes">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>4</val></magnitude>
+    <node name="Spizellomycetales">
+     <magnitude><val>4</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Chlorophyta">
+   <magnitude><val>2</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Chlorophyceae">
+    <magnitude><val>2</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Microsporaceae">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <magnitude><val>2</val></magnitude>
+     <node name="Microsporaceae">
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <magnitude><val>2</val></magnitude>
+      <node name="Microspora">
+       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+       <magnitude><val>2</val></magnitude>
+       <node name="Microspora_stagnorum">
+        <magnitude><val>2</val></magnitude>
+       </node>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Basidiomycota">
+   <magnitude><val>11</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Microbotryomycetes">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>11</val></magnitude>
+    <node name="Sporidiobolales">
+     <magnitude><val>11</val></magnitude>
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <node name="Sporidiobolaceae">
+      <magnitude><val>11</val></magnitude>
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <node name="Rhodotorula">
+       <magnitude><val>11</val></magnitude>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Mucoromycota">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
+   <node name="Glomeromycetes">
+    <magnitude><val>1</val></magnitude>
+   </node>
+  </node>
+  <node name="Dictyochophyceae">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
+   <node name="Dictyochophyceae">
+    <magnitude><val>1</val></magnitude>
+   </node>
+  </node>
+  <node name="Euglenozoa">
+   <magnitude><val>39</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Euglenida">
+    <magnitude><val>39</val></magnitude>
+   </node>
+  </node>
+  <node name="Platyhelminthes">
+   <magnitude><val>4</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Cestoda">
+    <magnitude><val>2</val></magnitude>
+   </node>
+   <node name="Catenulida">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>2</val></magnitude>
+    <node name="Stenostomidae">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <magnitude><val>2</val></magnitude>
+     <node name="Stenostomidae">
+      <magnitude><val>2</val></magnitude>
+     </node>
     </node>
    </node>
   </node>
   <node name="Arthropoda">
+   <magnitude><val>10</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>11</val></magnitude>
-   <node name="Insecta">
-    <magnitudeUnassigned><val>3</val></magnitudeUnassigned>
-    <magnitude><val>6</val></magnitude>
-    <node name="Coleoptera">
-     <magnitude><val>3</val></magnitude>
+   <node name="Branchiopoda">
+    <magnitude><val>2</val></magnitude>
+    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+    <node name="Anostraca">
+     <magnitude><val>1</val></magnitude>
     </node>
    </node>
    <node name="Hexanauplia">
@@ -6661,20 +6780,50 @@ function zoomOut()
      <magnitude><val>3</val></magnitude>
     </node>
    </node>
-   <node name="Branchiopoda">
-    <magnitude><val>2</val></magnitude>
+   <node name="Insecta">
+    <magnitudeUnassigned><val>4</val></magnitudeUnassigned>
+    <magnitude><val>5</val></magnitude>
+    <node name="Mecoptera">
+     <magnitude><val>1</val></magnitude>
+    </node>
    </node>
   </node>
-  <node name="Euglenozoa">
+  <node name="Cryptophyceae">
+   <magnitude><val>2</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Cryptophyceae">
+    <magnitude><val>2</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Cryptomonadales">
+     <magnitude><val>2</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Cnidaria">
+   <magnitude><val>6</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Myxozoa">
+    <magnitude><val>6</val></magnitude>
+   </node>
+  </node>
+  <node name="Chordata">
    <magnitude><val>1</val></magnitude>
-   <node name="Euglenida">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Leptocardii">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
     <magnitude><val>1</val></magnitude>
+    <node name="Amphioxiformes">
+     <magnitude><val>1</val></magnitude>
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <node name="Branchiostomidae">
+      <magnitude><val>1</val></magnitude>
+     </node>
+    </node>
    </node>
   </node>
   <node name="Bryozoa">
-   <magnitude><val>1</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
    <node name="Phylactolaemata">
     <magnitude><val>1</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
@@ -6682,11 +6831,11 @@ function zoomOut()
      <magnitude><val>1</val></magnitude>
      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
      <node name="Fredericellidae">
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
       <magnitude><val>1</val></magnitude>
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
       <node name="Fredericella">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
        <magnitude><val>1</val></magnitude>
+       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
        <node name="Fredericella_sultana">
         <magnitude><val>1</val></magnitude>
        </node>
@@ -6695,200 +6844,117 @@ function zoomOut()
     </node>
    </node>
   </node>
-  <node name="Chlorophyta">
-   <magnitude><val>4</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Ulvophyceae">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>1</val></magnitude>
-    <node name="Ulotrichales">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-   <node name="Chlorophyceae">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>3</val></magnitude>
-    <node name="Protosiphonales">
-     <magnitude><val>3</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Protosiphonaceae">
-      <magnitude><val>3</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Protosiphon">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>3</val></magnitude>
-       <node name="Protosiphon_botryoides">
-        <magnitude><val>3</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Ciliophora">
+  <node name="Gnathostomulida">
    <magnitude><val>2</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Heterotrichea">
-    <magnitude><val>2</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Heterotrichida">
-     <magnitude><val>2</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Basidiomycota">
-   <magnitude><val>1</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Agaricomycetes">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Geastrales">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>1</val></magnitude>
-     <node name="Sphaerobolaceae">
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <magnitude><val>1</val></magnitude>
-      <node name="Sphaerobolus">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>1</val></magnitude>
-       <node name="Sphaerobolus_stellatus">
-        <magnitude><val>1</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Streptophyta">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>6</val></magnitude>
-   <node name="Coleochaetophyceae">
-    <magnitude><val>4</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Coleochaetales">
-     <magnitude><val>4</val></magnitude>
-    </node>
-   </node>
-   <node name="Haplomitriopsida">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>2</val></magnitude>
-    <node name="Treubiales">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>2</val></magnitude>
-     <node name="Treubiaceae">
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <magnitude><val>2</val></magnitude>
-      <node name="Treubia">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>2</val></magnitude>
-       <node name="Treubia_lacunosa">
-        <magnitude><val>2</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Platyhelminthes">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>1</val></magnitude>
-   <node name="Cestoda">
-    <magnitude><val>1</val></magnitude>
-   </node>
-  </node>
-  <node name="Cryptophyceae">
-   <magnitude><val>4</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Cryptophyceae">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>4</val></magnitude>
-    <node name="Kathablepharidacea">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>1</val></magnitude>
-     <node name="Katablepharidaceae">
-      <magnitude><val>1</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Leucocryptos">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>1</val></magnitude>
-       <node name="Leucocryptos_marina">
-        <magnitude><val>1</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-    <node name="Cryptomonadales">
-     <magnitude><val>3</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Mucoromycota">
-   <magnitude><val>1</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Glomeromycetes">
-    <magnitude><val>1</val></magnitude>
-   </node>
-  </node>
-  <node name="Cnidaria">
-   <magnitude><val>26</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Myxozoa">
-    <magnitude><val>26</val></magnitude>
-    <magnitudeUnassigned><val>6</val></magnitudeUnassigned>
-    <node name="Multivalvulida">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>16</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>16</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Kudoa">
-       <magnitude><val>16</val></magnitude>
-      </node>
-     </node>
-    </node>
-    <node name="Malacovalvulida">
-     <magnitude><val>4</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Saccosporidae">
-      <magnitude><val>4</val></magnitude>
-     </node>
-    </node>
-   </node>
   </node>
  </node>
  <node name="Bacteria">
-  <magnitudeUnassigned><val>12</val></magnitudeUnassigned>
-  <magnitude><val>13</val></magnitude>
-  <node name="Proteobacteria">
-   <magnitude><val>1</val></magnitude>
-  </node>
- </node>
- <node name="Archaea">
-  <magnitude><val>117</val></magnitude>
-  <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-  <node name="Euryarchaeota">
+  <magnitude><val>14</val></magnitude>
+  <magnitudeUnassigned><val>3</val></magnitudeUnassigned>
+  <node name="Terrabacteria_group">
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>114</val></magnitude>
-   <node name="environmental_samples">
+   <magnitude><val>5</val></magnitude>
+   <node name="Firmicutes">
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>114</val></magnitude>
-    <node name="uncultured_marine_group_II/III">
-     <magnitude><val>114</val></magnitude>
-     <magnitudeUnassigned><val>113</val></magnitudeUnassigned>
-     <node name="euryarchaeote_AD1000_61_A07">
-      <magnitude><val>1</val></magnitude>
+    <magnitude><val>5</val></magnitude>
+    <node name="Bacilli">
+     <magnitude><val>5</val></magnitude>
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <node name="Lactobacillales">
+      <magnitude><val>3</val></magnitude>
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <node name="Lactobacillaceae">
+       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+       <magnitude><val>3</val></magnitude>
+       <node name="Agrilactobacillus">
+        <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+        <magnitude><val>3</val></magnitude>
+        <node name="Agrilactobacillus">
+         <magnitude><val>3</val></magnitude>
+         <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+         <node name="composti">
+          <magnitude><val>3</val></magnitude>
+          <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+          <node name="Agrilactobacillus">
+           <magnitude><val>3</val></magnitude>
+           <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+           <node name="composti">
+            <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+            <magnitude><val>3</val></magnitude>
+            <node name="DSM">
+             <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+             <magnitude><val>3</val></magnitude>
+             <node name="18527">
+              <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+              <magnitude><val>3</val></magnitude>
+              <node name="=">
+               <magnitude><val>3</val></magnitude>
+               <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+               <node name="JCM">
+                <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+                <magnitude><val>3</val></magnitude>
+                <node name="14202">
+                 <magnitude><val>3</val></magnitude>
+                </node>
+               </node>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
+       </node>
+      </node>
+     </node>
+     <node name="Bacillales">
+      <magnitude><val>2</val></magnitude>
      </node>
     </node>
    </node>
   </node>
-  <node name="TACK_group">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>3</val></magnitude>
-   <node name="Crenarchaeota">
+  <node name="Proteobacteria">
+   <magnitude><val>5</val></magnitude>
+   <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+   <node name="Alphaproteobacteria">
+    <magnitude><val>1</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Rickettsiales">
+     <magnitude><val>1</val></magnitude>
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <node name="unclassified_Rickettsiales">
+      <magnitude><val>1</val></magnitude>
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <node name="unclassified_Rickettsiales">
+       <magnitude><val>1</val></magnitude>
+      </node>
+     </node>
+    </node>
+   </node>
+   <node name="Gammaproteobacteria">
     <magnitude><val>3</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Thermoprotei">
+    <node name="Enterobacterales">
      <magnitude><val>3</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="PVC_group">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
+   <node name="Planctomycetes">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>1</val></magnitude>
+    <node name="Candidatus_Brocadiae">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <magnitude><val>1</val></magnitude>
+     <node name="Candidatus_Brocadiales">
+      <magnitude><val>1</val></magnitude>
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <node name="Candidatus_Brocadiaceae">
+       <magnitude><val>1</val></magnitude>
+      </node>
+     </node>
     </node>
    </node>
   </node>
