--- a/use_cases/lakes/norway/final_outcome/darn_lake_3_d_10_likelihood.krona_plot.html
+++ b/use_cases/lakes/norway/final_outcome/darn_lake_3_d_10_likelihood.krona_plot.html
@@ -6626,281 +6626,161 @@ function zoomOut()
     <dataset>darn_likelihood_lake_3_d_10_krona</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>585.799323194</val></magnitude>
+ <magnitude><val>320.87037</val></magnitude>
  <node name="Bacteria">
-  <magnitudeUnassigned><val>1.199503194</val></magnitudeUnassigned>
-  <magnitude><val>1.425503194</val></magnitude>
+  <magnitude><val>11.2252</val></magnitude>
+  <magnitudeUnassigned><val>2.6191</val></magnitudeUnassigned>
   <node name="Proteobacteria">
-   <magnitude><val>0.226</val></magnitude>
-  </node>
- </node>
- <node name="DISTANT">
-  <magnitude><val>103.233</val></magnitude>
- </node>
- <node name="Archaea">
-  <magnitude><val>173.2254</val></magnitude>
-  <node name="Euryarchaeota">
-   <magnitude><val>170.2844</val></magnitude>
-   <node name="environmental_samples">
-    <magnitude><val>170.2844</val></magnitude>
-    <node name="uncultured_marine_group_II/III">
-     <magnitude><val>170.2844</val></magnitude>
-     <magnitudeUnassigned><val>167.9804</val></magnitudeUnassigned>
-     <node name="euryarchaeote_AD1000_61_A07">
-      <magnitude><val>2.304</val></magnitude>
+   <magnitudeUnassigned><val>2.2058</val></magnitudeUnassigned>
+   <magnitude><val>2.7058</val></magnitude>
+   <node name="Alphaproteobacteria">
+    <magnitude><val>0.5</val></magnitude>
+    <node name="Rickettsiales">
+     <magnitude><val>0.5</val></magnitude>
+     <node name="unclassified_Rickettsiales">
+      <magnitude><val>0.5</val></magnitude>
+      <node name="unclassified_Rickettsiales">
+       <magnitude><val>0.5</val></magnitude>
+      </node>
      </node>
     </node>
    </node>
   </node>
-  <node name="TACK_group">
-   <magnitude><val>2.941</val></magnitude>
-   <node name="Crenarchaeota">
-    <magnitude><val>2.941</val></magnitude>
-    <node name="Thermoprotei">
-     <magnitude><val>2.941</val></magnitude>
+  <node name="Terrabacteria_group">
+   <magnitude><val>5.9003</val></magnitude>
+   <node name="Chloroflexi">
+    <magnitude><val>0.4227</val></magnitude>
+    <node name="Chloroflexi">
+     <magnitude><val>0.4227</val></magnitude>
+     <node name="Chloroflexi">
+      <magnitude><val>0.4227</val></magnitude>
+      <node name="Chloroflexi">
+       <magnitude><val>0.4227</val></magnitude>
+       <node name="environmental">
+        <magnitude><val>0.4227</val></magnitude>
+        <node name="samples">
+         <magnitude><val>0.4227</val></magnitude>
+         <node name="uncultured">
+          <magnitude><val>0.4227</val></magnitude>
+          <node name="Chloroflexi">
+           <magnitude><val>0.4227</val></magnitude>
+           <node name="bacterium">
+            <magnitude><val>0.4227</val></magnitude>
+            <node name="uncultured">
+             <magnitude><val>0.4227</val></magnitude>
+             <node name="Chloroflexi">
+              <magnitude><val>0.4227</val></magnitude>
+              <node name="bacterium">
+               <magnitude><val>0.4227</val></magnitude>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
+       </node>
+      </node>
+     </node>
+    </node>
+   </node>
+   <node name="Firmicutes">
+    <magnitude><val>5.4776</val></magnitude>
+    <node name="Bacilli">
+     <magnitude><val>5.4776</val></magnitude>
+     <node name="Bacillales">
+      <magnitude><val>0.8049</val></magnitude>
+     </node>
+     <node name="Lactobacillales">
+      <magnitude><val>4.6727</val></magnitude>
+      <node name="Lactobacillaceae">
+       <magnitude><val>4.6727</val></magnitude>
+       <node name="Agrilactobacillus">
+        <magnitude><val>4.6727</val></magnitude>
+        <node name="Agrilactobacillus">
+         <magnitude><val>4.6727</val></magnitude>
+         <node name="composti">
+          <magnitude><val>4.6727</val></magnitude>
+          <node name="Agrilactobacillus">
+           <magnitude><val>4.6727</val></magnitude>
+           <node name="composti">
+            <magnitude><val>4.6727</val></magnitude>
+            <node name="DSM">
+             <magnitude><val>4.6727</val></magnitude>
+             <node name="18527">
+              <magnitude><val>4.6727</val></magnitude>
+              <node name="=">
+               <magnitude><val>4.6727</val></magnitude>
+               <node name="JCM">
+                <magnitude><val>4.6727</val></magnitude>
+                <node name="14202">
+                 <magnitude><val>4.6727</val></magnitude>
+                </node>
+               </node>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
+       </node>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+ </node>
+ <node name="Archaea">
+  <magnitudeUnassigned><val>1.3604</val></magnitudeUnassigned>
+  <magnitude><val>3.04053</val></magnitude>
+  <node name="Candidatus_Thermoplasmatota">
+   <magnitude><val>1.04583</val></magnitude>
+   <node name="Thermoplasmata">
+    <magnitude><val>1.04583</val></magnitude>
+    <node name="Thermoplasmatales">
+     <magnitudeUnassigned><val>0.39573</val></magnitudeUnassigned>
+     <magnitude><val>1.04583</val></magnitude>
+     <node name="unclassified_Thermoplasmatales">
+      <magnitude><val>0.6501</val></magnitude>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Euryarchaeota">
+   <magnitude><val>0.6343</val></magnitude>
+   <node name="Archaeoglobi">
+    <magnitude><val>0.6343</val></magnitude>
+    <node name="Archaeoglobales">
+     <magnitude><val>0.6343</val></magnitude>
+     <node name="Archaeoglobaceae">
+      <magnitude><val>0.6343</val></magnitude>
+      <node name="Archaeoglobaceae">
+       <magnitude><val>0.6343</val></magnitude>
+       <node name="Ferroglobus">
+        <magnitude><val>0.6343</val></magnitude>
+       </node>
+      </node>
+     </node>
     </node>
    </node>
   </node>
  </node>
  <node name="Eukaryota">
-  <magnitudeUnassigned><val>193.5479</val></magnitudeUnassigned>
-  <magnitude><val>307.91542</val></magnitude>
-  <node name="Mucoromycota">
-   <magnitude><val>1.1873</val></magnitude>
-   <node name="Mortierellomycetes">
-    <magnitude><val>0.7447</val></magnitude>
-    <node name="Mortierellales">
-     <magnitude><val>0.7447</val></magnitude>
-     <node name="Mortierellaceae">
-      <magnitude><val>0.7447</val></magnitude>
-      <node name="Mortierella">
-       <magnitude><val>0.7447</val></magnitude>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Glomeromycetes">
-    <magnitude><val>0.4426</val></magnitude>
-   </node>
-  </node>
-  <node name="Chordata">
-   <magnitude><val>0.5497</val></magnitude>
-   <node name="Appendicularia">
-    <magnitude><val>0.5497</val></magnitude>
-    <node name="Copelata">
-     <magnitude><val>0.5497</val></magnitude>
-     <node name="Oikopleuridae">
-      <magnitude><val>0.5497</val></magnitude>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Arthropoda">
-   <magnitude><val>11.1164</val></magnitude>
-   <node name="Branchiopoda">
-    <magnitudeUnassigned><val>1.1029</val></magnitudeUnassigned>
-    <magnitude><val>1.6474</val></magnitude>
-    <node name="Anostraca">
-     <magnitude><val>0.5445</val></magnitude>
-    </node>
-   </node>
-   <node name="Insecta">
-    <magnitudeUnassigned><val>8.2651</val></magnitudeUnassigned>
-    <magnitude><val>9.469</val></magnitude>
-    <node name="Mecoptera">
-     <magnitude><val>0.7103</val></magnitude>
-    </node>
-    <node name="Coleoptera">
-     <magnitude><val>0.4936</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Ascomycota">
-   <magnitude><val>0.4318</val></magnitude>
-   <node name="Lecanoromycetes">
-    <magnitude><val>0.4318</val></magnitude>
-    <node name="Caliciales">
-     <magnitude><val>0.4318</val></magnitude>
-     <node name="Physciaceae">
-      <magnitude><val>0.4318</val></magnitude>
-      <node name="Heterodermia">
-       <magnitude><val>0.4318</val></magnitude>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Cryptophyceae">
-   <magnitude><val>0.527</val></magnitude>
-   <node name="Cryptophyceae">
-    <magnitude><val>0.527</val></magnitude>
-    <node name="Kathablepharidacea">
-     <magnitude><val>0.527</val></magnitude>
-     <node name="Katablepharidaceae">
-      <magnitude><val>0.527</val></magnitude>
-      <node name="Leucocryptos">
-       <magnitude><val>0.527</val></magnitude>
-       <node name="Leucocryptos_marina">
-        <magnitude><val>0.527</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Basidiomycota">
-   <magnitude><val>2.6369</val></magnitude>
-   <node name="Microbotryomycetes">
-    <magnitude><val>0.602</val></magnitude>
-    <node name="Sporidiobolales">
-     <magnitude><val>0.602</val></magnitude>
-     <node name="Sporidiobolaceae">
-      <magnitude><val>0.602</val></magnitude>
-      <node name="Rhodotorula">
-       <magnitude><val>0.602</val></magnitude>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Agaricomycetes">
-    <magnitude><val>2.0349</val></magnitude>
-    <node name="Geastrales">
-     <magnitude><val>2.0349</val></magnitude>
-     <node name="Sphaerobolaceae">
-      <magnitude><val>2.0349</val></magnitude>
-      <node name="Sphaerobolus">
-       <magnitude><val>2.0349</val></magnitude>
-       <node name="Sphaerobolus_stellatus">
-        <magnitude><val>2.0349</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Chytridiomycota">
-   <magnitude><val>0.5023</val></magnitude>
-   <node name="Chytridiomycetes">
-    <magnitude><val>0.5023</val></magnitude>
-    <node name="Synchytriales">
-     <magnitude><val>0.5023</val></magnitude>
-     <node name="Synchytriaceae">
-      <magnitude><val>0.5023</val></magnitude>
-      <node name="Synchytrium">
-       <magnitude><val>0.5023</val></magnitude>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Ciliophora">
-   <magnitude><val>0.9934</val></magnitude>
-   <node name="Heterotrichea">
-    <magnitude><val>0.9934</val></magnitude>
-    <node name="Heterotrichida">
-     <magnitude><val>0.9934</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Streptophyta">
-   <magnitude><val>1.93942</val></magnitude>
-   <node name="Coleochaetophyceae">
-    <magnitude><val>0.69662</val></magnitude>
-    <node name="Coleochaetales">
-     <magnitude><val>0.69662</val></magnitude>
-    </node>
-   </node>
-   <node name="Haplomitriopsida">
-    <magnitude><val>1.2428</val></magnitude>
-    <node name="Treubiales">
-     <magnitude><val>1.2428</val></magnitude>
-     <node name="Treubiaceae">
-      <magnitude><val>1.2428</val></magnitude>
-      <node name="Treubia">
-       <magnitude><val>1.2428</val></magnitude>
-       <node name="Treubia_lacunosa">
-        <magnitude><val>1.2428</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Cnidaria">
-   <magnitude><val>15.0699</val></magnitude>
-   <node name="Myxozoa">
-    <magnitudeUnassigned><val>4.5063</val></magnitudeUnassigned>
-    <magnitude><val>15.0699</val></magnitude>
-    <node name="Multivalvulida">
-     <magnitude><val>8.5636</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>8.5636</val></magnitude>
-      <node name="Kudoa">
-       <magnitude><val>8.5636</val></magnitude>
-      </node>
-     </node>
-    </node>
-    <node name="Malacovalvulida">
-     <magnitude><val>2</val></magnitude>
-     <node name="Saccosporidae">
-      <magnitude><val>2</val></magnitude>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Nematoda">
-   <magnitude><val>66.7111</val></magnitude>
-   <magnitudeUnassigned><val>0.3048</val></magnitudeUnassigned>
-   <node name="Chromadorea">
-    <magnitude><val>66.4063</val></magnitude>
-    <magnitudeUnassigned><val>61.8422</val></magnitudeUnassigned>
-    <node name="Desmoscolecida">
-     <magnitude><val>0.7524</val></magnitude>
-     <node name="Desmoscolecidae">
-      <magnitude><val>0.7524</val></magnitude>
-      <node name="Desmoscolex">
-       <magnitude><val>0.7524</val></magnitude>
-       <node name="Desmoscolex_koloensis">
-        <magnitude><val>0.7524</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-    <node name="Plectida">
-     <magnitude><val>3.8117</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Bryozoa">
-   <magnitude><val>0.9945</val></magnitude>
-   <node name="Phylactolaemata">
-    <magnitude><val>0.9945</val></magnitude>
-    <node name="Fredericellidae">
-     <magnitude><val>0.9945</val></magnitude>
-     <node name="Fredericellidae">
-      <magnitude><val>0.9945</val></magnitude>
-      <node name="Fredericella">
-       <magnitude><val>0.9945</val></magnitude>
-       <node name="Fredericella_sultana">
-        <magnitude><val>0.9945</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Choanoflagellata">
-   <magnitude><val>0.4959</val></magnitude>
-   <node name="Choanoflagellata">
-    <magnitude><val>0.4959</val></magnitude>
-    <node name="Craspedida">
-     <magnitude><val>0.4959</val></magnitude>
-     <node name="Salpingoecidae">
-      <magnitude><val>0.4959</val></magnitude>
-      <node name="Monosiga">
-       <magnitude><val>0.4959</val></magnitude>
-       <node name="Monosiga_brevicollis">
-        <magnitude><val>0.4959</val></magnitude>
+  <magnitudeUnassigned><val>96.0341</val></magnitudeUnassigned>
+  <magnitude><val>296.92094</val></magnitude>
+  <node name="Chlorophyta">
+   <magnitude><val>0.5447</val></magnitude>
+   <node name="Chlorophyceae">
+    <magnitude><val>0.5447</val></magnitude>
+    <node name="Microsporaceae">
+     <magnitude><val>0.5447</val></magnitude>
+     <node name="Microsporaceae">
+      <magnitude><val>0.5447</val></magnitude>
+      <node name="Microspora">
+       <magnitude><val>0.5447</val></magnitude>
+       <node name="Microspora_stagnorum">
+        <magnitude><val>0.5447</val></magnitude>
        </node>
       </node>
      </node>
@@ -6908,29 +6788,138 @@ function zoomOut()
    </node>
   </node>
   <node name="Euglenozoa">
-   <magnitude><val>0.5778</val></magnitude>
+   <magnitude><val>170.8254</val></magnitude>
    <node name="Euglenida">
-    <magnitude><val>0.5778</val></magnitude>
-   </node>
-  </node>
-  <node name="Chlorophyta">
-   <magnitude><val>10.6341</val></magnitude>
-   <node name="Chlorophyceae">
-    <magnitude><val>10.6341</val></magnitude>
-    <node name="Protosiphonales">
-     <magnitude><val>10.6341</val></magnitude>
-     <node name="Protosiphonaceae">
-      <magnitude><val>10.6341</val></magnitude>
-      <node name="Protosiphon">
-       <magnitude><val>10.6341</val></magnitude>
-       <node name="Protosiphon_botryoides">
-        <magnitude><val>10.6341</val></magnitude>
+    <magnitudeUnassigned><val>168.4816</val></magnitudeUnassigned>
+    <magnitude><val>170.8254</val></magnitude>
+    <node name="Euglenales">
+     <magnitude><val>0.4395</val></magnitude>
+    </node>
+    <node name="Eutreptiales">
+     <magnitude><val>1.9043</val></magnitude>
+     <node name="Eutreptiella">
+      <magnitude><val>1.9043</val></magnitude>
+      <node name="Eutreptiella">
+       <magnitude><val>1.9043</val></magnitude>
+       <node name="Eutreptiella_gymnastica">
+        <magnitude><val>1.9043</val></magnitude>
        </node>
       </node>
      </node>
     </node>
    </node>
   </node>
+  <node name="Arthropoda">
+   <magnitude><val>10.7674</val></magnitude>
+   <node name="Branchiopoda">
+    <magnitude><val>5.157</val></magnitude>
+    <magnitudeUnassigned><val>3.6035</val></magnitudeUnassigned>
+    <node name="Anostraca">
+     <magnitude><val>1.5535</val></magnitude>
+    </node>
+   </node>
+   <node name="Insecta">
+    <magnitude><val>5.6104</val></magnitude>
+    <magnitudeUnassigned><val>1.5209</val></magnitudeUnassigned>
+    <node name="Mecoptera">
+     <magnitude><val>0.6175</val></magnitude>
+    </node>
+    <node name="Diptera">
+     <magnitude><val>3.472</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Platyhelminthes">
+   <magnitude><val>1.79194</val></magnitude>
+   <node name="Trematoda">
+    <magnitude><val>1.79194</val></magnitude>
+    <node name="Cercaria">
+     <magnitude><val>0.08684</val></magnitude>
+     <node name="Cercaria">
+      <magnitude><val>0.08684</val></magnitude>
+      <node name="Cercaria">
+       <magnitude><val>0.08684</val></magnitude>
+      </node>
+     </node>
+    </node>
+    <node name="Diplostomida">
+     <magnitude><val>1.7051</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Streptophyta">
+   <magnitude><val>0.4741</val></magnitude>
+   <node name="Magnoliopsida">
+    <magnitude><val>0.4741</val></magnitude>
+    <node name="Celastrales">
+     <magnitude><val>0.4741</val></magnitude>
+     <node name="Celastraceae">
+      <magnitude><val>0.4741</val></magnitude>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Chytridiomycota">
+   <magnitude><val>2.2581</val></magnitude>
+   <node name="Chytridiomycetes">
+    <magnitude><val>2.2581</val></magnitude>
+    <node name="Synchytriales">
+     <magnitude><val>0.2581</val></magnitude>
+     <node name="Synchytriaceae">
+      <magnitude><val>0.2581</val></magnitude>
+      <node name="Synchytrium">
+       <magnitude><val>0.2581</val></magnitude>
+      </node>
+     </node>
+    </node>
+    <node name="Spizellomycetales">
+     <magnitude><val>2</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Cnidaria">
+   <magnitude><val>3.635</val></magnitude>
+   <node name="Myxozoa">
+    <magnitude><val>3.635</val></magnitude>
+    <magnitudeUnassigned><val>3.1208</val></magnitudeUnassigned>
+    <node name="Bivalvulida">
+     <magnitude><val>0.5142</val></magnitude>
+     <node name="Enteromyxidae">
+      <magnitude><val>0.5142</val></magnitude>
+      <node name="Enteromyxum">
+       <magnitude><val>0.5142</val></magnitude>
+       <node name="Enteromyxum_leei">
+        <magnitude><val>0.5142</val></magnitude>
+       </node>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Ciliophora">
+   <magnitude><val>0.5771</val></magnitude>
+   <node name="Spirotrichea">
+    <magnitude><val>0.5771</val></magnitude>
+   </node>
+  </node>
+  <node name="Basidiomycota">
+   <magnitude><val>10.0131</val></magnitude>
+   <node name="Microbotryomycetes">
+    <magnitude><val>10.0131</val></magnitude>
+    <node name="Sporidiobolales">
+     <magnitude><val>10.0131</val></magnitude>
+     <node name="Sporidiobolaceae">
+      <magnitude><val>10.0131</val></magnitude>
+      <node name="Rhodotorula">
+       <magnitude><val>10.0131</val></magnitude>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+ </node>
+ <node name="DISTANT">
+  <magnitude><val>9.6837</val></magnitude>
  </node>
 </node>
   </krona>
